# skillsible

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  SESSION_HANDOFF.md  SUPPORT_MATRIX.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: auto-merge-on-comment.yml  ci.yml  delete-merged-branch.yml  publish.yml
docs/: demo.md  skillsible-demo.cast
examples/: google-workspace.yml  skills.yml  stack.yml
scripts/: demo_session.sh
src/skillsible/: __init__.py  adapters.py  cli.py  errors.py  lockfile.py  manifest.py  planner.py  resolver.py
tests/: test_cli.py  test_manifest.py  test_planner.py  test_resolver.py
tests/integration/docker/: Dockerfile  Dockerfile.real-agents  integration.yml  real-agents.yml  run-real-agents.sh  run.sh
tests/integration/docker/mock-bin/: claude  codex  gh  npm  npx  pyright  ruff
tests/integration/fixtures/demo-skills/writing-clearly-and-concisely/: SKILL.md
